--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     </div>
                     <div class="form-group">
                         <label>総還元率 (%)</label>
-                        <input type="number" id="totalReturnRate" value="98" min="0" max="100" step="0.1">
+                        <input type="number" id="totalReturnRate" value="98" min="0" step="0.1">
                     </div>
                     <div class="form-group">
                         <label>オリパ提供価値</label>
